--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,16 @@
         }
     ],
     "require": {
-        "symfony/console": "^3.3",
-        "guzzlehttp/guzzle": "^6.3",
-        "josegonzalez/dotenv": "^3.0"
+        "symfony/console": "^5.3",
+        "guzzlehttp/guzzle": "^7.4",
+        "josegonzalez/dotenv": "^3.2"
     },
     "autoload": {
         "psr-4": {
             "Spoof\\": "./src"
         }
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.6"
     }
 }
