--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ DESTINATION_URL= http://localhost/
 
 # The secret to use when signing the request.
 GITHUB_SECRET=SomeWebhookSecret
+
+# The token used to get the latest release for a backned.
+GITHUB_TOKEN=gh_f00bar
