--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,5 @@ DESTINATION_URL= http://localhost/
 # The secret to use when signing the request.
 GITHUB_SECRET=SomeWebhookSecret
 
-# The token used to get the latest release for a backned.
+# The token used to get the latest release for a repository.
 GITHUB_TOKEN=gh_f00bar
